--- a/post.html
+++ b/post.html
@@ -42,6 +42,9 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="schedule.html">Schedule</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="post.html">Updates</a>
             </li>
             <li class="nav-item">
