--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="schedule.html">Schedule</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html">Updates</a>
+              <a class="nav-link" href="updates.html">Updates</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -94,7 +94,7 @@
           </p>
           <h2 class="section-heading">Officers</h2>
           <p>
-            Our President is Grace Yu, and our Vice President is Jennifer Lee.
+            Our President is Grace Yu, and our Vice President of Finance is Jennifer Lee. Profiles coming soon!
             <!-- TODO: Add profiles and descriptions -->
           </p>
           <h2 class="section-heading">Meetings</h2>
