--- a/schedule.html
+++ b/schedule.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="schedule.html">Schedule</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html">Updates</a>
+              <a class="nav-link" href="updates.html">Updates</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
